Fix divider not showing

--- a/css/divider.css
+++ b/css/divider.css
@@ -1,7 +1,5 @@
-/* =Styles for 'divider' field
--------------------------------------------------------------- */
-
 .rwmb-divider-wrapper hr {
+	flex: 1;
 	border: none;
 	border-top: 1px solid #e6e6e6;
 }
